# mnist-torch

./: 29300.png.json  CMakeLists.txt  build.sh  example-app.cpp
